WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165705
Fix initialization of contentUpdateFrequency
https://bugs.webkit.org/show_bug.cgi?id=165705
Summary
Fix initialization of contentUpdateFrequency
Simon Fraser (smfr)
Reported
2016-12-09 17:18:21 PST
Fix initialization of contentUpdateFrequency
Attachments
Patch
(1.46 KB, patch)
2016-12-09 17:20 PST
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-12-09 17:20:09 PST
Created
attachment 296749
[details]
Patch
Simon Fraser (smfr)
Comment 2
2016-12-09 17:45:46 PST
https://trac.webkit.org/r209639
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug