Fix initialization of contentUpdateFrequency https://bugs.webkit.org/show_bug.cgi?id=165705 rdar://problem/29602039

Reviewed by Tim Horton.

The value that controls web content update frequency was not being initialized.

* UIProcess/API/Cocoa/WKWebViewConfiguration.mm:
(-[WKWebViewConfiguration init]):

Canonical link: https://commits.webkit.org/183295@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209639 268f45cc-cd09-0410-ab3c-d52691b4dbfc